--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <header>
-    <script src="Script.js" />
+    <script src="Script.js">
+    <link rel="stylesheet" href="Style.css">
   </header>
   
   <body>
